--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>three.js webgl - shaders - ocean</title>
+    <title>Star Ship</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="main.css">
+
+
+    <style>
+
+        *, *::before, *::after {
+            margin: 0;
+            padding: 0
+        }
+
+        html {
+            overflow: hidden
+        }
+
+    </style>
+
 </head>
 <body>
     <div id="container"></div>
