--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Star Ship</title>
     <meta charset="utf-8">
@@ -7,8 +8,9 @@
 
 
     <style>
-
-        *, *::before, *::after {
+        *,
+        *::before,
+        *::after {
             margin: 0;
             padding: 0
         }
@@ -17,9 +19,38 @@
             overflow: hidden
         }
 
+        body {
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+
+        .card {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 2rem;
+
+            position: fixed;
+            top: 1rem;
+            left: 1rem;
+            z-index: 999999;
+
+            background: rgba(255, 255, 255, .75);
+            padding: 2rem;
+            font-size: 1.5rem;
+        }
+
+        .text-lg {
+            font-size: 1.5rem;
+            font-weight: 600;
+        }
+
+        .text-sm {
+            font-size: 1rem;
+        }
     </style>
 
 </head>
+
 <body>
     <div id="container"></div>
     <div id="info">
@@ -34,5 +65,8 @@
         }
     </script>
     <script type="module" src="src/js/main.js"></script>
+
+    
 </body>
+
 </html>
