--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             width: 100vw;
             height: 100vh;
             background-size: cover;
-            background-image: url('/src/images/base.png');
+            background-image: url('/src/images/base.jpg');
         }
 
         .controls {
